[project]
name = "stable_swap"
version = "0.1.0"
authors = ["Maurice Weber"]
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.34", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
rand = "0.8.5"
more-asserts = "0.3.1"
